[package]
name = "hnr"
version = "0.1.0"
authors = ["viswa-2561 <viswaprasath.s@zohocorp.com>"]

[dependencies]
clap = "2.31.2"
hyper = "0.12"
reqwest="0.8"
pretty_env_logger = "0.2.0"
url="1.7.1"
hyper-native-tls = "0.2.4"
serde_json = "1.0"
serde_derive="1.0.70"
serde="1.0.70"
colored = "1.6"
scraper = "0.7.0"
webbrowser="0.3.1"
